--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/backward3"
-        app:layout_constraintStart_toStartOf="@id/website_share_button"
+        app:layout_constraintLeft_toLeftOf="@+id/divider4"
         app:layout_constraintTop_toTopOf="@id/title" />
 
 
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="40dp"
         android:text="@string/About.walletID"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/divider4"
@@ -124,7 +124,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="40dp"
         android:text="@string/About.twitter"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/view4"
@@ -134,7 +134,7 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginBottom="24dp"
         android:text="@string/About.blog"
         android:textSize="18sp"
@@ -143,32 +143,32 @@
 
     <ImageView
         android:id="@+id/twitter_share_button"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:src="@drawable/twitter"
+        app:layout_constraintLeft_toLeftOf="@+id/divider4"
         app:layout_constraintBottom_toBottomOf="@+id/textView22"
-        app:layout_constraintTop_toTopOf="@+id/textView22"
-        tools:layout_editor_absoluteX="17dp" />
+        app:layout_constraintTop_toTopOf="@+id/textView22" />
 
     <ImageView
         android:id="@+id/discord_share_button"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:src="@drawable/discord"
         app:layout_constraintBottom_toBottomOf="@+id/textView24"
         app:layout_constraintTop_toTopOf="@+id/textView24"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="17dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/divider4"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/website_share_button"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:src="@drawable/website"
+        app:layout_constraintLeft_toLeftOf="@+id/divider4"
         app:layout_constraintBottom_toBottomOf="@+id/brd_website"
         app:layout_constraintTop_toTopOf="@+id/brd_website"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="17dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.breadwallet.presenter.customviews.BaseTextView
         android:id="@+id/policy_text"
@@ -206,7 +206,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:layout_marginLeft="70dp"
+        android:layout_marginLeft="40dp"
         android:text="@string/About.reddit"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/divider1"
@@ -214,11 +214,11 @@
 
     <ImageView
         android:id="@+id/telegram_share_button"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:src="@drawable/telegram"
+        app:layout_constraintLeft_toLeftOf="@+id/divider4"
         app:layout_constraintBottom_toBottomOf="@+id/textView21"
-        app:layout_constraintTop_toTopOf="@+id/textView21"
-        tools:layout_editor_absoluteX="17dp" />
+        app:layout_constraintTop_toTopOf="@+id/textView21" />
 
 </android.support.constraint.ConstraintLayout>
