--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,7 +35,7 @@
     <item name="menu_icons" type="color">#29ABE2</item>
     <color name="shimmer_color">#a2ffffff</color>
 
-    <item name="logo_gradient_start" type="color">#ededed</item>
+    <item name="logo_gradient_start" type="color">#1c1242</item>
     <item name="logo_gradient_end" type="color">#be00ff</item>
 
     <item name="finger_gradient_start" type="color">#9c7ee2</item>
